--- a/EFI/CLOVER/config.plist
+++ b/EFI/CLOVER/config.plist
@@ -9,7 +9,7 @@
 			<key>Debug</key>
 			<false/>
 			<key>DropOEM_DSM</key>
-			<false/>
+			<true/>
 			<key>Fixes</key>
 			<dict>
 				<key>FixShutdown_0004</key>
@@ -75,13 +75,13 @@
 			</dict>
 			<dict>
 				<key>Signature</key>
-				<string>SSDT</string>
-				<key>TableId</key>
-				<string>CpuPm</string>
+				<string>DMAR</string>
 			</dict>
 			<dict>
 				<key>Signature</key>
-				<string>DMAR</string>
+				<string>SSDT</string>
+				<key>TableId</key>
+				<string>CpuPm</string>
 			</dict>
 		</array>
 		<key>HaltEnabler</key>
@@ -93,11 +93,15 @@
 			<key>Generate</key>
 			<false/>
 		</dict>
+		<key>SortedOrder</key>
+		<array>
+			<string>SSDT.aml</string>
+		</array>
 	</dict>
 	<key>Boot</key>
 	<dict>
 		<key>Arguments</key>
-		<string>-v slide=0 dart=0 npci=0x3000</string>
+		<string>-v slide=0 dart=0 npci=0x3000 kext-dev-mode=1 rootless=0</string>
 		<key>Debug</key>
 		<false/>
 		<key>DefaultVolume</key>
@@ -120,6 +124,11 @@
 	</dict>
 	<key>Devices</key>
 	<dict>
+		<key>Audio</key>
+		<dict>
+			<key>ResetHDA</key>
+			<true/>
+		</dict>
 		<key>USB</key>
 		<dict>
 			<key>AddClockID</key>
@@ -137,8 +146,6 @@
 			<string>Windows</string>
 			<string>\EFI\BOOT\BOOTX64.EFI</string>
 		</array>
-		<key>Language</key>
-		<string>en:0</string>
 		<key>Mouse</key>
 		<dict>
 			<key>DoubleClick</key>
@@ -182,18 +189,6 @@
 	</dict>
 	<key>KernelAndKextPatches</key>
 	<dict>
-		<key>ATIConnectorsController</key>
-		<string>7000</string>
-		<key>ATIConnectorsData</key>
-		<string>020000000001000000010103220502020200000000010000
-000102031204010100040000040300000001030711020303
-0004000004030000000104072103040475e21a0000000000
-7ae21a00000000007de21a000000000081e21a0000000000</string>
-		<key>ATIConnectorsPatch</key>
-		<string>000800000402000000710103000000001204020300000000
-040000001402000000010000000000000000000600000000
-000400000403000000010407000000002205040200000000
-040000001400000000011a00000000001102000500000000</string>
 		<key>AppleRTC</key>
 		<false/>
 		<key>AsusAICPUPM</key>
@@ -233,29 +228,13 @@
 				<false/>
 				<key>Find</key>
 				<data>
-				AQABD4Q=
+				yXQWDzJIJf8PAABI
 				</data>
 				<key>Name</key>
 				<string>AppleIntelCPUPowerManagement</string>
 				<key>Replace</key>
 				<data>
-				AQABD4U=
-				</data>
-			</dict>
-			<dict>
-				<key>Comment</key>
-				<string>AICPM patch</string>
-				<key>Disabled</key>
-				<false/>
-				<key>Find</key>
-				<data>
-				dRG5
-				</data>
-				<key>Name</key>
-				<string>AppleIntelCPUPowerManagement</string>
-				<key>Replace</key>
-				<data>
-				6xG5
+				yesWDzJIJf8PAABI
 				</data>
 			</dict>
 			<dict>
@@ -281,13 +260,13 @@
 				<false/>
 				<key>Find</key>
 				<data>
-				yXQWDzJIJf8PAABI
+				PnU5
 				</data>
 				<key>Name</key>
 				<string>AppleIntelCPUPowerManagement</string>
 				<key>Replace</key>
 				<data>
-				yesWDzJIJf8PAABI
+				PpCQ
 				</data>
 			</dict>
 			<dict>
@@ -297,13 +276,29 @@
 				<false/>
 				<key>Find</key>
 				<data>
-				PnU5
+				AQABD4Q=
 				</data>
 				<key>Name</key>
 				<string>AppleIntelCPUPowerManagement</string>
 				<key>Replace</key>
 				<data>
-				PpCQ
+				AQABD4U=
+				</data>
+			</dict>
+			<dict>
+				<key>Comment</key>
+				<string>AICPM patch</string>
+				<key>Disabled</key>
+				<false/>
+				<key>Find</key>
+				<data>
+				dRG5
+				</data>
+				<key>Name</key>
+				<string>AppleIntelCPUPowerManagement</string>
+				<key>Replace</key>
+				<data>
+				6xG5
 				</data>
 			</dict>
 			<dict>
@@ -370,33 +365,35 @@
 	<key>SMBIOS</key>
 	<dict>
 		<key>BiosReleaseDate</key>
-		<string>10/12/2012</string>
+		<string>10/23/12</string>
 		<key>BiosVendor</key>
 		<string>Apple Inc.</string>
 		<key>BiosVersion</key>
-		<string>IM131.88Z.010A.B05.1210121459</string>
+		<string>MM61.88Z.0106.B00.1208091121</string>
 		<key>Board-ID</key>
-		<string>Mac-FC02E91DDD3FA6A4</string>
+		<string>Mac-F65AE981FFA204ED</string>
 		<key>BoardManufacturer</key>
 		<string>Apple Inc.</string>
 		<key>BoardType</key>
 		<integer>10</integer>
 		<key>ChassisAssetTag</key>
-		<string>iMac-Aluminum</string>
+		<string>Mini-Aluminum</string>
 		<key>ChassisManufacturer</key>
 		<string>Apple Inc.</string>
 		<key>ChassisType</key>
-		<string>0x13</string>
+		<string>0x16</string>
 		<key>Family</key>
-		<string>iMac</string>
+		<string>Mac mini</string>
 		<key>LocationInChassis</key>
 		<string>Part Component</string>
 		<key>Manufacturer</key>
 		<string>Apple Inc.</string>
+		<key>Mobile</key>
+		<false/>
 		<key>ProductName</key>
-		<string>iMac13,2</string>
+		<string>Macmini6,2</string>
 		<key>SerialNumber</key>
-		<string>C02K6214DNMP</string>
+		<string>C02LC281DWYN</string>
 		<key>Trust</key>
 		<false/>
 		<key>Version</key>
