--- a/EFI/CLOVER/kexts/Other_Optional/NVWebDriverLibValFix.kext/Contents/Info.plist
+++ b/EFI/CLOVER/kexts/Other_Optional/NVWebDriverLibValFix.kext/Contents/Info.plist
@@ -3,29 +3,27 @@
 <plist version="1.0">
 <dict>
 	<key>BuildMachineOSBuild</key>
-	<string>16G29</string>
+	<string>16F73</string>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>en</string>
 	<key>CFBundleExecutable</key>
-	<string>Lilu</string>
+	<string>NVWebDriverLibValFix</string>
 	<key>CFBundleIdentifier</key>
-	<string>as.vit9696.Lilu</string>
+	<string>com.apple.kext.mologie.NVWebDriverLibValFix</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
-	<string>Lilu</string>
+	<string>NVWebDriverLibValFix</string>
 	<key>CFBundlePackageType</key>
 	<string>KEXT</string>
 	<key>CFBundleShortVersionString</key>
-	<string>1.1.7</string>
-	<key>CFBundleSignature</key>
-	<string>????</string>
+	<string>1.0.0</string>
 	<key>CFBundleSupportedPlatforms</key>
 	<array>
 		<string>MacOSX</string>
 	</array>
 	<key>CFBundleVersion</key>
-	<string>1.1.7</string>
+	<string>1</string>
 	<key>DTCompiler</key>
 	<string>com.apple.compilers.llvm.clang.1_0</string>
 	<key>DTPlatformBuild</key>
@@ -42,40 +40,30 @@
 	<string>8E3004b</string>
 	<key>IOKitPersonalities</key>
 	<dict>
-		<key>as.vit9696.Lilu</key>
+		<key>com.mologie.NVWebDriverLibValFix</key>
 		<dict>
 			<key>CFBundleIdentifier</key>
-			<string>as.vit9696.Lilu</string>
+			<string>com.apple.kext.mologie.NVWebDriverLibValFix</string>
 			<key>IOClass</key>
-			<string>Lilu</string>
+			<string>com_mologie_NVWebDriverLibValFix</string>
 			<key>IOMatchCategory</key>
-			<string>Lilu</string>
+			<string>com_mologie_NVWebDriverLibValFix</string>
 			<key>IOProviderClass</key>
 			<string>IOResources</string>
 			<key>IOResourceMatch</key>
-			<string>IOKit</string>
+			<string>IOBSD</string>
 		</dict>
 	</dict>
 	<key>NSHumanReadableCopyright</key>
-	<string>Copyright © 2016-2017 vit9696. All rights reserved.</string>
-	<key>OSBundleCompatibleVersion</key>
-	<string>1.1.0</string>
+	<string>Definitely Not Copyright © 2017 Apple Inc. All rights reserved... for petty technical reasons. Please load me, kextutil?</string>
 	<key>OSBundleLibraries</key>
 	<dict>
-		<key>com.apple.kpi.bsd</key>
-		<string>12.0.0</string>
-		<key>com.apple.kpi.dsep</key>
-		<string>12.0.0</string>
 		<key>com.apple.kpi.iokit</key>
-		<string>12.0.0</string>
+		<string>16.6</string>
 		<key>com.apple.kpi.libkern</key>
-		<string>12.0.0</string>
-		<key>com.apple.kpi.mach</key>
-		<string>12.0.0</string>
-		<key>com.apple.kpi.unsupported</key>
-		<string>12.0.0</string>
+		<string>16.6</string>
+		<key>com.apple.kpi.private</key>
+		<string>16.6</string>
 	</dict>
-	<key>OSBundleRequired</key>
-	<string>Root</string>
 </dict>
 </plist>
