update apfs.efi to avoid log at startup

--- a/EFI/CLOVER/config-web-drive.plist
+++ b/EFI/CLOVER/config-web-drive.plist
@@ -39,7 +39,7 @@
 		<key>SSDT</key>
 		<dict>
 			<key>DropOem</key>
-			<false/>
+			<true/>
 			<key>Generate</key>
 			<dict>
 				<key>CStates</key>
