1. use AppleALC 2. updated lilu & CPUFriend

--- a/EFI/CLOVER/kexts/Other/CPUFriend.kext/Contents/Info.plist
+++ b/EFI/CLOVER/kexts/Other/CPUFriend.kext/Contents/Info.plist
@@ -3,7 +3,7 @@
 <plist version="1.0">
 <dict>
 	<key>BuildMachineOSBuild</key>
-	<string>17A360a</string>
+	<string>17B42a</string>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>en</string>
 	<key>CFBundleExecutable</key>
@@ -17,7 +17,7 @@
 	<key>CFBundlePackageType</key>
 	<string>KEXT</string>
 	<key>CFBundleShortVersionString</key>
-	<string>1.0.1</string>
+	<string>1.1.2</string>
 	<key>CFBundleSignature</key>
 	<string>????</string>
 	<key>CFBundleSupportedPlatforms</key>
@@ -25,21 +25,21 @@
 		<string>MacOSX</string>
 	</array>
 	<key>CFBundleVersion</key>
-	<string>1.0.1</string>
+	<string>1.1.2</string>
 	<key>DTCompiler</key>
 	<string>com.apple.compilers.llvm.clang.1_0</string>
 	<key>DTPlatformBuild</key>
-	<string>8E3004b</string>
+	<string>9A235</string>
 	<key>DTPlatformVersion</key>
 	<string>GM</string>
 	<key>DTSDKBuild</key>
-	<string>16E185</string>
+	<string>17A360</string>
 	<key>DTSDKName</key>
-	<string>macosx10.12</string>
+	<string>macosx10.13</string>
 	<key>DTXcode</key>
-	<string>0833</string>
+	<string>0900</string>
 	<key>DTXcodeBuild</key>
-	<string>8E3004b</string>
+	<string>9A235</string>
 	<key>IOKitPersonalities</key>
 	<dict>
 		<key>CPUFriend</key>
@@ -60,7 +60,7 @@
 			<key>CFBundleIdentifier</key>
 			<string>org.vanilla.driver.CPUFriend</string>
 			<key>IOClass</key>
-			<string>CPUFriendPlatform</string>
+			<string>CPUFriendData</string>
 			<key>IOParentMatch</key>
 			<dict>
 				<key>IOPropertyMatch</key>
@@ -91,7 +91,7 @@
 	<key>OSBundleLibraries</key>
 	<dict>
 		<key>as.vit9696.Lilu</key>
-		<string>1.1.6</string>
+		<string>1.2.0</string>
 		<key>com.apple.iokit.IOACPIFamily</key>
 		<string>1.0.0d1</string>
 		<key>com.apple.kpi.bsd</key>
