--- a/EFI/CLOVER/kexts/Other/AppleALC.kext/Contents/Info.plist
+++ b/EFI/CLOVER/kexts/Other/AppleALC.kext/Contents/Info.plist
@@ -3,17 +3,17 @@
 <plist version="1.0">
 <dict>
 	<key>BuildMachineOSBuild</key>
-	<string>16G29</string>
+	<string>17B48</string>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>en</string>
 	<key>CFBundleExecutable</key>
-	<string>NvidiaGraphicsFixup</string>
+	<string>AppleALC</string>
 	<key>CFBundleIdentifier</key>
-	<string>as.lvs1974.NvidiaGraphicsFixup</string>
+	<string>as.vit9696.AppleALC</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
-	<string>NvidiaGraphicsFixup</string>
+	<string>AppleALC</string>
 	<key>CFBundlePackageType</key>
 	<string>KEXT</string>
 	<key>CFBundleShortVersionString</key>
@@ -29,44 +29,27 @@
 	<key>DTCompiler</key>
 	<string>com.apple.compilers.llvm.clang.1_0</string>
 	<key>DTPlatformBuild</key>
-	<string>9A1004</string>
+	<string>9B55</string>
 	<key>DTPlatformVersion</key>
 	<string>GM</string>
 	<key>DTSDKBuild</key>
-	<string>17A360</string>
+	<string>17B41</string>
 	<key>DTSDKName</key>
 	<string>macosx10.13</string>
 	<key>DTXcode</key>
-	<string>0901</string>
+	<string>0910</string>
 	<key>DTXcodeBuild</key>
-	<string>9A1004</string>
+	<string>9B55</string>
 	<key>IOKitPersonalities</key>
 	<dict>
-		<key>as.lvs1974.NvidiaAudio</key>
+		<key>as.vit9696.AppleALC</key>
 		<dict>
 			<key>CFBundleIdentifier</key>
-			<string>as.lvs1974.NvidiaGraphicsFixup</string>
+			<string>as.vit9696.AppleALC</string>
 			<key>IOClass</key>
-			<string>NVidiaAudio</string>
+			<string>AppleALC</string>
 			<key>IOMatchCategory</key>
-			<string>IOService</string>
-			<key>IOPCIClassMatch</key>
-			<string>0x04030000&amp;0xffff0000</string>
-			<key>IOPCIMatch</key>
-			<string>0x000010de&amp;0x0000ffff</string>
-			<key>IOProbeScore</key>
-			<integer>60000</integer>
-			<key>IOProviderClass</key>
-			<string>IOPCIDevice</string>
-		</dict>
-		<key>as.lvs1974.NvidiaGraphicsFixup</key>
-		<dict>
-			<key>CFBundleIdentifier</key>
-			<string>as.lvs1974.NvidiaGraphicsFixup</string>
-			<key>IOClass</key>
-			<string>NvidiaGraphicsFixup</string>
-			<key>IOMatchCategory</key>
-			<string>NvidiaGraphicsFixup</string>
+			<string>AppleALC</string>
 			<key>IOProviderClass</key>
 			<string>IOResources</string>
 			<key>IOResourceMatch</key>
@@ -74,13 +57,15 @@
 		</dict>
 	</dict>
 	<key>NSHumanReadableCopyright</key>
-	<string>Copyright © 2017 lvs1974. All rights reserved.</string>
+	<string>Copyright © 2017 vit9696. All rights reserved.</string>
 	<key>OSBundleCompatibleVersion</key>
 	<string>1.0</string>
 	<key>OSBundleLibraries</key>
 	<dict>
 		<key>as.vit9696.Lilu</key>
 		<string>1.2.0</string>
+		<key>as.vit9696.PinConfigs</key>
+		<string>1.0.0</string>
 		<key>com.apple.kpi.bsd</key>
 		<string>12.0.0</string>
 		<key>com.apple.kpi.dsep</key>
