--- a/EFI/CLOVER/kexts/Other/RealtekRTL8111.kext/Contents/Info.plist
+++ b/EFI/CLOVER/kexts/Other/RealtekRTL8111.kext/Contents/Info.plist
@@ -3,7 +3,7 @@
 <plist version="1.0">
 <dict>
 	<key>BuildMachineOSBuild</key>
-	<string>17D47</string>
+	<string>16G1114</string>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>English</string>
 	<key>CFBundleExecutable</key>
@@ -29,17 +29,17 @@
 	<key>DTCompiler</key>
 	<string>com.apple.compilers.llvm.clang.1_0</string>
 	<key>DTPlatformBuild</key>
-	<string>9C40b</string>
+	<string>8E3004b</string>
 	<key>DTPlatformVersion</key>
 	<string>GM</string>
 	<key>DTSDKBuild</key>
-	<string>17C76</string>
+	<string>16E185</string>
 	<key>DTSDKName</key>
-	<string>macosx10.13</string>
+	<string>macosx10.12</string>
 	<key>DTXcode</key>
-	<string>0920</string>
+	<string>0833</string>
 	<key>DTXcodeBuild</key>
-	<string>9C40b</string>
+	<string>8E3004b</string>
 	<key>IOKitPersonalities</key>
 	<dict>
 		<key>RTL8111 PCIe Adapter</key>
