--- a/EFI/CLOVER/config-NVIDIA-card.plist
+++ b/EFI/CLOVER/config-NVIDIA-card.plist
@@ -764,7 +764,7 @@
 				<key>InfoPlistPatch</key>
 				<false/>
 				<key>MatchOS</key>
-				<string>10.12.x,10.13.x</string>
+				<string>10.12.x,10.13.x,10.14.x</string>
 				<key>Name</key>
 				<string>com.apple.driver.AppleIntelCPUPowerManagement</string>
 				<key>Replace</key>
@@ -782,7 +782,7 @@
 				<key>InfoPlistPatch</key>
 				<false/>
 				<key>MatchOS</key>
-				<string>10.12.x,10.13.x</string>
+				<string>10.12.x,10.13.x,10.14.x</string>
 				<key>Name</key>
 				<string>com.apple.driver.AppleIntelCPUPowerManagement</string>
 				<key>Replace</key>
@@ -800,7 +800,7 @@
 				<key>InfoPlistPatch</key>
 				<false/>
 				<key>MatchOS</key>
-				<string>10.12.x,10.13.x</string>
+				<string>10.12.x,10.13.x,10.14.x</string>
 				<key>Name</key>
 				<string>com.apple.driver.AppleIntelCPUPowerManagement</string>
 				<key>Replace</key>
@@ -854,7 +854,7 @@
 				<key>InfoPlistPatch</key>
 				<false/>
 				<key>MatchOS</key>
-				<string>10.12.x,10.13.x</string>
+				<string>10.12.x,10.13.x,10.14.x</string>
 				<key>Name</key>
 				<string>com.apple.driver.AppleIntelCPUPowerManagement</string>
 				<key>Replace</key>
@@ -872,7 +872,7 @@
 				<key>InfoPlistPatch</key>
 				<false/>
 				<key>MatchOS</key>
-				<string>10.12.x,10.13.x</string>
+				<string>10.12.x,10.13.x,10.14.x</string>
 				<key>Name</key>
 				<string>com.apple.driver.AppleIntelCPUPowerManagement</string>
 				<key>Replace</key>
@@ -890,7 +890,7 @@
 				<key>InfoPlistPatch</key>
 				<false/>
 				<key>MatchOS</key>
-				<string>10.13.x</string>
+				<string>10.13.x,10.14.x</string>
 				<key>Name</key>
 				<string>com.apple.driver.AppleIntelCPUPowerManagement</string>
 				<key>Replace</key>
@@ -908,7 +908,7 @@
 				<key>InfoPlistPatch</key>
 				<false/>
 				<key>MatchOS</key>
-				<string>10.13.x</string>
+				<string>10.13.x,10.14.x</string>
 				<key>Name</key>
 				<string>com.apple.driver.AppleIntelCPUPowerManagement</string>
 				<key>Replace</key>
