--- a/EFI/CLOVER/kexts/Other/SMCLightSensor.kext/Contents/Info.plist
+++ b/EFI/CLOVER/kexts/Other/SMCLightSensor.kext/Contents/Info.plist
@@ -3,7 +3,7 @@
 <plist version="1.0">
 <dict>
 	<key>BuildMachineOSBuild</key>
-	<string>18F132</string>
+	<string>18E226</string>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>en</string>
 	<key>CFBundleExecutable</key>
